--- a/my_orders.html
+++ b/my_orders.html
@@ -56,7 +56,27 @@
         .pay-item.paid b { color: var(--delivered); }
         .pay-item.completed b { color: #10b981; }
 
-        .help-text { margin-top: 12px; font-size: 11px; color: #94a3b8; padding-top: 8px; border-top: 1px dashed var(--border); }
+        .help-text { 
+            margin-top: 12px; 
+            font-size: 11px; 
+            color: #64748b; 
+            padding-top: 10px; 
+            border-top: 1px dashed var(--border);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        /* পেমেন্ট মেথড হাইলাইট */
+        .pay-badge {
+            background: #1e293b;
+            color: #ffffff;
+            padding: 2px 8px;
+            border-radius: 5px;
+            font-weight: 600;
+            font-size: 10px;
+            text-transform: uppercase;
+        }
     </style>
 </head>
 <body>
@@ -105,7 +125,6 @@
                         const shortId = c.key.slice(-6).toUpperCase();
                         const d = o.timestamp ? new Date(o.timestamp).toLocaleDateString('en-GB') : "N/A";
 
-                        // --- হিসাবের নিখুঁত লজিক ---
                         const productPrice = parseInt(o.productPrice || o.price || 0);
                         const deliveryCharge = parseInt(o.deliveryCharge || 0);
                         const totalPayable = productPrice + deliveryCharge;
@@ -176,7 +195,8 @@
                             </div>
 
                             <div class="help-text">
-                                <i class="fa fa-info-circle"></i> TrxID: ${o.trxID || 'N/A'} | Delivery: ৳ ${o.deliveryCharge}
+                                <span><i class="fa fa-fingerprint"></i> TrxID: ${o.trxID || 'N/A'}</span>
+                                <span class="pay-badge"><i class="fa fa-wallet"></i> ${o.paymentMethod || 'COD'}</span>
                             </div>
                         </div>`;
                 });
